--- a/package.json
+++ b/package.json
@@ -10,15 +10,33 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hapi/iron": "^6.0.0",
+    "@hookform/resolvers": "^2.8.8",
+    "@sentry/browser": "^6.19.1",
+    "axios": "^0.26.1",
+    "classnames": "^2.3.1",
+    "cookie": "^0.4.2",
+    "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "next": "12.1.0",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.1",
+    "react-query": "^3.34.16",
+    "react-toastify": "^8.2.0",
+    "styled-components": "^5.3.3",
+    "swr": "^1.2.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@types/cookie": "^0.4.1",
+    "@types/cors": "^2.8.12",
     "@types/node": "17.0.22",
     "@types/react": "17.0.41",
+    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-eslint": "^10.1.0",
