--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/iron": "^6.0.0",
     "@hookform/resolvers": "^2.8.8",
     "@sentry/browser": "^6.19.1",
+    "@stitches/react": "^1.2.7",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "cookie": "^0.4.2",
