--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hapi/iron": "^6.0.0",
     "@hookform/resolvers": "^2.8.8",
+    "@radix-ui/react-alert-dialog": "^0.1.7",
     "@sentry/browser": "^6.19.1",
     "@stitches/react": "^1.2.7",
     "axios": "^0.26.1",
