--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie": "^0.4.2",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "lodash.mapvalues": "^4.6.0",
     "next": "12.1.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
@@ -35,6 +36,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@types/cookie": "^0.4.1",
     "@types/cors": "^2.8.12",
+    "@types/lodash.mapvalues": "^4.6.6",
     "@types/node": "17.0.22",
     "@types/react": "17.0.41",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
