--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/iron": "^6.0.0",
     "@hookform/resolvers": "^2.8.8",
     "@radix-ui/react-alert-dialog": "^0.1.7",
+    "@radix-ui/react-dialog": "^0.1.7",
     "@sentry/browser": "^6.19.1",
     "@stitches/react": "^1.2.7",
     "axios": "^0.26.1",
