--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@hookform/resolvers": "^2.8.8",
     "@radix-ui/react-alert-dialog": "^0.1.7",
     "@radix-ui/react-dialog": "^0.1.7",
+    "@radix-ui/react-icons": "^1.1.0",
+    "@radix-ui/react-visually-hidden": "^0.1.4",
     "@sentry/browser": "^6.19.1",
     "@stitches/react": "^1.2.7",
     "axios": "^0.26.1",
