--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/iron": "^6.0.0",
     "@hookform/resolvers": "^2.8.8",
     "@radix-ui/react-alert-dialog": "^0.1.7",
+    "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-dialog": "^0.1.7",
     "@radix-ui/react-icons": "^1.1.0",
     "@radix-ui/react-visually-hidden": "^0.1.4",
