--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-dialog": "^0.1.7",
     "@radix-ui/react-icons": "^1.1.0",
+    "@radix-ui/react-label": "^0.1.5",
     "@radix-ui/react-visually-hidden": "^0.1.4",
     "@sentry/browser": "^6.19.1",
     "@stitches/react": "^1.2.7",
