chore(eslint): changes rules related to typescript classes

--- a/.eslintrc
+++ b/.eslintrc
@@ -127,6 +127,18 @@
         ],
         "newlines-between": "always-and-inside-groups"
       }
-    ]
+    ],
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-useless-constructor": [
+      "error"
+    ],
+    "lines-between-class-members": [
+      "error",
+      "always",
+      {
+        "exceptAfterSingleLine": true
+      }
+    ],
+    "max-classes-per-file": "off"
   }
 }
