--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@antfu/utils": "^0.5.2",
     "@hapi/iron": "^6.0.0",
     "@hookform/resolvers": "^2.8.8",
     "@radix-ui/react-alert-dialog": "^0.1.7",
@@ -25,6 +26,7 @@
     "cookie": "^0.4.2",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "http-status-codes": "^2.2.0",
     "lodash.mapvalues": "^4.6.0",
     "next": "12.1.0",
     "nookies": "^2.5.2",
