--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENVIRONMENT=
 
 APP_API_BASE_URL_DASHBOARD=
 
+#production|development|homolog
+APP_SENTRY_ENVIRONMENT=
 APP_SENTRY_DSN=
 
 AUTH_APP_URL=
