--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.1",
+    "react-imask": "^6.4.2",
     "react-query": "^3.34.16",
     "react-toastify": "^8.2.0",
     "swr": "^1.2.2",
