--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.28.0",
     "http-status-codes": "^2.2.0",
     "lodash.mapvalues": "^4.6.0",
+    "nanoid": "^3.3.4",
     "next": "12.1.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
