--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-imask": "^6.4.2",
     "react-query": "^3.34.16",
     "react-toastify": "^8.2.0",
+    "swiper": "^8.2.2",
     "swr": "^1.2.2",
     "yup": "^0.32.11"
   },
