--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@radix-ui/react-alert-dialog": "^0.1.7",
     "@radix-ui/react-checkbox": "^0.1.5",
+    "@radix-ui/react-collapsible": "^0.1.6",
     "@radix-ui/react-dialog": "^0.1.7",
     "@radix-ui/react-icons": "^1.1.0",
     "@radix-ui/react-label": "^0.1.5",
