--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-portal": "^0.1.4",
     "@radix-ui/react-select": "^0.1.1",
     "@radix-ui/react-separator": "^0.1.4",
+    "@radix-ui/react-switch": "^0.1.5",
     "@radix-ui/react-tooltip": "^0.1.7",
     "@radix-ui/react-visually-hidden": "^0.1.4",
     "@sentry/browser": "^6.19.7",
