--- a/package.json
+++ b/package.json
@@ -75,5 +75,9 @@
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.0",
     "typescript": "4.7.3"
+  },
+  "resolutions": {
+    "@types/react": "<18.0.0",
+    "@types/react-dom": "<18.0.0"
   }
 }
