--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "12.1.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.1",
     "react-imask": "^6.4.2",
@@ -56,6 +57,7 @@
     "@types/lodash.mapvalues": "^4.6.6",
     "@types/node": "17.0.22",
     "@types/react": "17.0.41",
+    "@types/react-datepicker": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-eslint": "^10.1.0",
