--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.1",
     "react-imask": "^6.4.2",
+    "react-movable": "^3.0.4",
     "react-query": "^3.34.16",
     "react-select": "^5.3.2",
     "react-toastify": "^8.2.0",
